--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@storybook/addon-essentials": "^6.3.12",
     "@storybook/addon-links": "^6.3.12",
     "@storybook/react": "^6.3.12",
+    "@zeit/next-css": "^1.0.1",
     "babel-loader": "^8.2.2"
   }
 }
