--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-helmet": "^6.1.0",
     "react-query": "^3.34.7",
     "sharp": "^0.29.3",
-    "theme-ui": "^0.11.3",
+    "theme-ui": "^0.16.2",
+    "@theme-ui/mdx": "^0.16.2",
     "yup": "^0.32.11"
   },
   "devDependencies": {
