--- a/package.json
+++ b/package.json
@@ -16,25 +16,31 @@
   },
   "dependencies": {
     "@emotion/react": "^11.7.1",
+    "@mdx-js/react": "3.0.1",
     "@medusajs/medusa-js": "^1.0.1-canary.3",
     "@stripe/react-stripe-js": "^1.7.0",
     "@stripe/stripe-js": "^1.22.0",
     "axios": "^0.23.0",
     "deepmerge": "^4.2.2",
     "formik": "^2.2.9",
+    "i18next": "^23.12.2",
+    "i18next-resources-to-backend": "^1.2.1",
     "medusa-react": "^0.1.2",
     "moment": "^2.29.1",
-    "next": "^12.0.7",
-    "prettier": "^2.5.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "next": "14.2.5",
+    "next-i18n-router": "^5.5.1",
+    "next-i18next": "15.3.0",
+    "next-intercom": "^0.1.4",
+    "prettier": "3.3.3",
     "react-helmet": "^6.1.0",
+    "react-i18next": "^15.0.0",
     "react-query": "^3.34.7",
     "sharp": "^0.29.3",
     "theme-ui": "^0.16.2",
-    "@mdx-js/react": "3.0.1",
-    
-    "yup": "1.4.0"
+    "yup": "1.4.0",
+    "next-intl": "^3.8.0",
+    "react": "^18",
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@babel/core": "^7.15.8",
