--- a/package.json
+++ b/package.json
@@ -16,31 +16,23 @@
   },
   "dependencies": {
     "@emotion/react": "^11.7.1",
-    "@mdx-js/react": "3.0.1",
     "@medusajs/medusa-js": "^1.0.1-canary.3",
     "@stripe/react-stripe-js": "^1.7.0",
     "@stripe/stripe-js": "^1.22.0",
     "axios": "^0.23.0",
     "deepmerge": "^4.2.2",
     "formik": "^2.2.9",
-    "i18next": "^23.12.2",
-    "i18next-resources-to-backend": "^1.2.1",
     "medusa-react": "^0.1.2",
     "moment": "^2.29.1",
-    "next": "14.2.5",
-    "next-i18n-router": "^5.5.1",
-    "next-i18next": "15.3.0",
-    "next-intercom": "^0.1.4",
-    "next-intl": "^3.8.0",
-    "prettier": "3.3.3",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^12.0.7",
+    "prettier": "^2.5.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
-    "react-i18next": "^15.0.0",
     "react-query": "^3.34.7",
     "sharp": "^0.29.3",
-    "theme-ui": "^0.16.2",
-    "yup": "1.4.0"
+    "theme-ui": "^0.11.3",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.15.8",
@@ -48,8 +40,6 @@
     "@storybook/addon-essentials": "^6.3.12",
     "@storybook/addon-links": "^6.3.12",
     "@storybook/react": "^6.3.12",
-    "@zeit/next-css": "^1.0.1",
-    "babel-loader": "^8.2.2",
-    "typescript": "^5.5.4"
+    "babel-loader": "^8.2.2"
   }
 }
